added missing get endpoints for parking lot/spaces